# wildberries-rest-api

./: .env  .gitignore  Caddyfile  Dockerfile  README.MD  docker-compose-prod.yaml  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
.github/workflows/: deploy.yaml  prod.yaml
_settings/: asgi.py  settings.py  urls.py  wsgi.py
accounts/: forms.py  urls.py  views.py
nginx/: nginx.conf
static/: extra.css
templates/: api.html  base.html  cart.html  index.html  ordered.html  stock.html  summary.html
templates/includes/: card.html  cart_card.html  nav.html  ordered_card.html  pages.html  revenue.html  summary_card.html
templates/registration/: logged_out.html  login.html  password_change_form.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  signup.html
wb/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
wb/management/commands/: refresh.py
wb/migrations/: 0001_initial.py  0002_alter_apikey_user.py  0003_alter_apikey_user.py  0004_auto_20220419_0958.py  0005_auto_20220419_1012.py  0006_auto_20230325_0000.py
wb/services/: filtering.py  filters.py  json_encoder.py  marketplace.py  new_api_client.py  redis.py  search.py  services.py  sorting.py  statistics.py  tools.py  warehouse.py
wb/services/rest_client/: jwt_client.py  standard_client.py  statistics_client.py  x64_client.py
wb/templatetags/: custom_tags.py
